[package]
name = "cecd"
version = "0.1.0"
edition = "2021"
authors = ["Vicki Pfau <vi@endrift.com>"]
license = "LGPL-2.1-or-later"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
config = { version = "0.14", default-features = false, features = ["async", "toml"] }
input-linux = "0.7"
libc = "0.2"
linux-cec = { path = "../linux-cec", features = ["async", "tracing"] }
nix = { version = "0.29", default-features = false, features = ["fs"] }
num_enum = "0.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
udev = "0.9"
zbus = { version = "5", default-features = false, features = ["tokio"] }
