[package]
name = "linux-cec-macros"
version = "0.1.0"
edition = "2021"
authors = ["Vicki Pfau <vi@endrift.com>"]
license = "LGPL-2.1-or-later"
description = "Private macros for implementing the linux-cec crate"
repository = "https://gitlab.steamos.cloud/holo/linux-cec/"
readme = "../README.md"
keywords = ["cec"]

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
proc-macro2 = "1.0"
