[package]
name = "linux-cec-sys"
version = "0.1.0"
edition = "2021"
authors = ["Vicki Pfau <vi@endrift.com>"]
license = "BSD-3-Clause"
description = "Rust bindings for the Linux CEC subsystem"
repository = "https://gitlab.steamos.cloud/holo/linux-cec/"

[features]
default = ["std"]
std = []

[lib]

[dependencies]
bitflags = "2.6"
nix = { version = "0.29", default-features = false, features = ["ioctl"] }
