[package]
name = "linux-cec"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "cectool"

[dependencies]
bitfield-struct = "0.9"
bitflags = "2.6"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
nix = { version = "0.29", default-features = false, features = ["ioctl"] }
linux-cec-macros = { path = "../linux-cec-macros" }
num_enum = "0.7"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
