[package]
name = "linux-cec"
version = "0.1.0"
edition = "2021"
authors = ["Vicki Pfau <vi@endrift.com>"]
license = "LGPL-2.1-or-later"

[features]
default = ["async", "cectool", "tracing"]
async = ["dep:tokio"]
cectool = ["dep:clap"]
tracing = ["dep:tracing"]

[lib]

[[bin]]
name = "cectool"
required-features = ["cectool"]

[dependencies]
bitfield-struct = "0.9"
bitflags = "2.6"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"], optional = true }
nix = { version = "0.29", default-features = false, features = ["fs", "ioctl", "poll"] }
linux-cec-macros = { path = "../linux-cec-macros" }
linux-cec-sys = { path = "../linux-cec-sys" }
num_enum = "0.7"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"
tracing = { version = "0.1", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = ["fs", "macros", "rt-multi-thread", "sync"], optional = true }
